--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,12 +50,12 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Practice_Suite" class="navigator-link ">
-                    <span>TestSuite.xml</span>
+                    <span>TestSuite2.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Practice_Suite" class="navigator-link ">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,22 @@
                     <div class="method-list-content passed suite-Practice_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Practice_Suite" title="com.GroupId.test.DemoTest2" class="method navigator-link" hash-for-method="demo_Testing01">demo_Testing01</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Practice_Suite" title="com.GroupId.test.DemoTest" class="method navigator-link" hash-for-method="demo_Testing01">demo_Testing01</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Practice_Suite" title="com.GroupId.test.DemoTest2" class="method navigator-link" hash-for-method="demo_Testing01">demo_Testing01</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Practice_Suite" title="com.GroupId.test.DemoTest" class="method navigator-link" hash-for-method="demo_Testing02">demo_Testing02</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Practice_Suite -->
@@ -131,12 +146,41 @@
                   <span class="method-name">demo_Testing01</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="demo_Testing02">
+                  </a> <!-- demo_Testing02 -->
+                  <span class="method-name">demo_Testing02</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Practice_Suite-class-passed -->
+          <div class="suite-Practice_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.GroupId.test.DemoTest2</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="demo_Testing01">
+                  </a> <!-- demo_Testing01 -->
+                  <span class="method-name">demo_Testing01</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="demo_Testing01">
+                  </a> <!-- demo_Testing01 -->
+                  <span class="method-name">demo_Testing01</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Practice_Suite-class-passed -->
         </div> <!-- panel Practice_Suite -->
         <div panel-name="test-xml-Practice_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/home/admin1/eclipse-workspace/artifactID/src/test/resource/XMLFiles/TestSuite.xml</span>
+            <span class="header-content">/home/admin1/eclipse-workspace/artifactID/src/test/resource/XMLFiles/TestSuite2.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,8 +190,14 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test Basics 1&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.GroupId.test.DemoTest&quot;/&gt;
+      &lt;class name=&quot;com.GroupId.test.DemoTest2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test Basics 1 --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Test Basics 2&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;com.GroupId.test.DemoTest2&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- Test Basics 2 --&gt;
 &lt;/suite&gt; &lt;!-- Practice Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +209,10 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test Basics 1 (1 class)</span>
+                <span class="test-name">Test Basics 1 (2 classes)</span>
+              </li>
+              <li>
+                <span class="test-name">Test Basics 2 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,16 +238,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'demo_Testing01')
-data.setCell(0, 2, 'com.GroupId.test.DemoTest')
-data.setCell(0, 3, 2573);
+data.setCell(0, 2, 'com.GroupId.test.DemoTest2')
+data.setCell(0, 3, 4259);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'demo_Testing01')
+data.setCell(1, 2, 'com.GroupId.test.DemoTest2')
+data.setCell(1, 3, 3790);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'demo_Testing01')
+data.setCell(2, 2, 'com.GroupId.test.DemoTest')
+data.setCell(2, 3, 2689);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'demo_Testing02')
+data.setCell(3, 2, 'com.GroupId.test.DemoTest')
+data.setCell(3, 3, 843);
 window.suiteTableData['Practice_Suite']= { tableData: data, tableDiv: 'times-div-Practice_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Practice_Suite">
               </div> <!-- times-div-Practice_Suite -->
             </div> <!-- times-div -->
@@ -209,9 +274,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Practice_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.GroupId.test.DemoTest2</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">beforeTest</span>
+                <br/>
+                <span class="ignored-method-name">afterTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Practice_Suite" class="panel">
@@ -221,18 +295,71 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.GroupId.test.DemoTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">startTest</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">38 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">demo_Testing01</span>
-                <span class="method-start">4329 ms</span>
+                <span class="method-start">2666 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">demo_Testing02</span>
+                <span class="method-start">5359 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">CloseSession</span>
-                <span class="method-start">6906 ms</span>
+                <span class="method-start">6204 ms</span>
               </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.GroupId.test.DemoTest2</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">startTest</span>
+                <span class="method-start">6326 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">demo_Testing01</span>
+                <span class="method-start">7346 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">CloseSession</span>
+                <span class="method-start">11607 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.GroupId.test.DemoTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">11968 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.GroupId.test.DemoTest2</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">12034 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="configuration-class before">
+                <span class="method-name">startTest</span>
+                <span class="method-start">12036 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">demo_Testing01</span>
+                <span class="method-start">13244 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">CloseSession</span>
+                <span class="method-start">17036 ms</span>
+              </div> <!-- configuration-class after -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">17207 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
