--- a/test-output/old/Practice Suite/methods-not-run.html
+++ b/test-output/old/Practice Suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.GroupId.utils.BaseTest.beforeTest</td></tr>
+<tr><td>com.GroupId.utils.BaseTest.afterTest</td></tr>
 </table>
