--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,17 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Practice Suite</th></tr>
-<tr><td><a href="#t0">Test Basics 1</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,993</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test Basics 2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,177</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">17,170</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,611</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Practice Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test Basics 1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.GroupId.test.DemoTest</td><td><a href="#m0">demo_Testing01</a></td><td rowspan="1">1695633263475</td><td rowspan="1">2689</td></tr><tr class="passedeven"><td><a href="#m1">demo_Testing02</a></td><td rowspan="1">1695633266168</td><td rowspan="1">843</td></tr><tr class="passedodd"><td rowspan="1">com.GroupId.test.DemoTest2</td><td><a href="#m2">demo_Testing01</a></td><td rowspan="1">1695633268155</td><td rowspan="1">4259</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test Basics 2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.GroupId.test.DemoTest2</td><td><a href="#m3">demo_Testing01</a></td><td rowspan="1">1695633274053</td><td rowspan="1">3790</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.GroupId.test.DemoTest</td><td><a href="#m0">demo_Testing01</a></td><td rowspan="1">1695919128842</td><td rowspan="1">1950</td></tr><tr class="passedeven"><td><a href="#m1">demo_Testing02</a></td><td rowspan="1">1695919130797</td><td rowspan="1">776</td></tr></tbody>
 </table>
-<h2>Test Basics 1</h2><h3 id="m0">com.GroupId.test.DemoTest#demo_Testing01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.GroupId.test.DemoTest#demo_Testing01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.GroupId.test.DemoTest#demo_Testing02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.GroupId.test.DemoTest2#demo_Testing01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test Basics 2</h2><h3 id="m3">com.GroupId.test.DemoTest2#demo_Testing01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
