--- a/test-output/old/Practice Suite/methods-alphabetical.html
+++ b/test-output/old/Practice Suite/methods-alphabetical.html
@@ -1,32 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Practice Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.CloseSession()[pri:0, instance:com.GroupId.test.DemoTest2@6340e5f0]">&lt;&lt;CloseSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:27</td>   <td>-5403</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.CloseSession()[pri:0, instance:com.GroupId.test.DemoTest@4d154ccd]">&lt;&lt;CloseSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:37</td>   <td>5429</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.CloseSession()[pri:0, instance:com.GroupId.test.DemoTest2@3b0fe47a]">&lt;&lt;CloseSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:32</td>   <td>361</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterTest()[pri:0, instance:com.GroupId.test.DemoTest@4d154ccd]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:38</td>   <td>5601</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterTest()[pri:0, instance:com.GroupId.test.DemoTest2@3b0fe47a]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:20</td>   <td>-11598</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:com.GroupId.test.DemoTest@4d154ccd]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:32</td>   <td>428</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:com.GroupId.test.DemoTest2@3b0fe47a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/09/25 14:44:28</td>   <td>-4261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest2.demo_Testing01()[pri:0, instance:com.GroupId.test.DemoTest2@6340e5f0]">demo_Testing01</td> 
-  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="99a379">  <td>23/09/25 14:44:23</td>   <td>-8941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.demo_Testing01()[pri:0, instance:com.GroupId.test.DemoTest@4d154ccd]">demo_Testing01</td> 
-  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>23/09/25 14:44:34</td>   <td>1637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest2.demo_Testing01()[pri:0, instance:com.GroupId.test.DemoTest2@3b0fe47a]">demo_Testing01</td> 
-  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="99a379">  <td>23/09/25 14:44:26</td>   <td>-6248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.demo_Testing02()[pri:0, instance:com.GroupId.test.DemoTest@4d154ccd]">demo_Testing02</td> 
-  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:20</td>   <td>-11568</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.startTest()[pri:0, instance:com.GroupId.test.DemoTest@4d154ccd]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:27</td>   <td>-5280</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.startTest()[pri:0, instance:com.GroupId.test.DemoTest2@6340e5f0]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
-<tr bgcolor="a07e72">  <td>23/09/25 14:44:32</td>   <td>429</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.startTest()[pri:0, instance:com.GroupId.test.DemoTest2@3b0fe47a]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1681920301</td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.CloseSession()[pri:0, instance:com.GroupId.test.DemoTest@65c7a252]">&lt;&lt;CloseSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>116</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.CloseSession()[pri:0, instance:com.GroupId.test.DemoTest2@202b0582]">&lt;&lt;CloseSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterTest()[pri:0, instance:com.GroupId.test.DemoTest@65c7a252]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>118</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterTest()[pri:0, instance:com.GroupId.test.DemoTest2@202b0582]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>-72</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:com.GroupId.test.DemoTest@65c7a252]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>106</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:com.GroupId.test.DemoTest2@202b0582]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="99a379">  <td>23/09/28 21:27:38</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.demo_Testing01()[pri:0, instance:com.GroupId.test.DemoTest@65c7a252]">demo_Testing01</td> 
+  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="6fe47a">  <td>23/09/28 21:27:38</td>   <td>110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest2.demo_Testing01()[pri:0, instance:com.GroupId.test.DemoTest2@202b0582]">demo_Testing01</td> 
+  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="99a379">  <td>23/09/28 21:27:38</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.demo_Testing02()[pri:0, instance:com.GroupId.test.DemoTest@65c7a252]">demo_Testing02</td> 
+  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>-53</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.startTest()[pri:0, instance:com.GroupId.test.DemoTest@65c7a252]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837457281</td>   <td></td> </tr>
+<tr bgcolor="6e7bab">  <td>23/09/28 21:27:38</td>   <td>107</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.startTest()[pri:0, instance:com.GroupId.test.DemoTest2@202b0582]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@837457281</td>   <td></td> </tr>
 </table>
